fix story aniamte visibilty bugs

--- a/src/mip-story/mip-story.less
+++ b/src/mip-story/mip-story.less
@@ -12,6 +12,7 @@ html#mip-i-story-standalone body {
 }
 
 mip-story {
+    display: block;
     background: #000;
     position: relative !important;
     height: 100% !important;
